# rust-serverless-example

./: Cargo.toml  README.md
rust-serverless-example/: Cargo.toml  package-lock.json  package.json  serverless.yml
rust-serverless-example/src/: main.rs
